--- a/learning/origin/build.gradle
+++ b/learning/origin/build.gradle
@@ -12,6 +12,7 @@ repositories {
 }
 
 dependencies {
+    implementation("cglib:cglib:3.2.10")
     implementation("log4j:log4j:1.2.17")
     implementation("org.slf4j:slf4j-log4j12:1.7.25")
     testImplementation("junit:junit:4.12")
