--- a/learning/origin/build.gradle
+++ b/learning/origin/build.gradle
@@ -13,6 +13,18 @@ repositories {
 
 dependencies {
     implementation("cglib:cglib:3.2.10")
+
+    implementation("commons-io:commons-io:2.6")
+    implementation("commons-collections:commons-collections:3.2.2")
+    implementation("commons-codec:commons-codec:1.11")
+    implementation("commons-beanutils:commons-beanutils:1.9.3")
+    implementation("org.apache.commons:commons-lang3:3.7")
+
+    implementation("com.alibaba:fastjson:1.2.40")
+
+    implementation("org.yaml:snakeyaml:1.18")
+
+    implementation("org.dom4j:dom4j:2.1.1")
     implementation("log4j:log4j:1.2.17")
     implementation("org.slf4j:slf4j-log4j12:1.7.25")
     testImplementation("junit:junit:4.12")
