--- a/learning/origin/build.gradle
+++ b/learning/origin/build.gradle
@@ -5,13 +5,24 @@ plugins {
 group 'com.spring'
 version '0.0.1-SNAPSHOT'
 
-sourceCompatibility = 1.8
+sourceCompatibility = 11
+targetCompatibility = 11
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    implementation("javax.servlet:javax.servlet-api:3.1.0")
+    implementation("javax.servlet.jsp:jsp-api:2.2")
+    implementation("javax.servlet:jstl:1.2")
+
+    implementation("com.alibaba:fastjson:1.2.40")
+    implementation("org.freemarker:freemarker:2.3.23")
+
+    implementation("mysql:mysql-connector-java:6.0.6")
+    implementation("com.alibaba:druid:1.1.2")
+
     implementation("cglib:cglib:3.2.10")
 
     implementation("commons-io:commons-io:2.6")
