--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,6 @@ configure(allprojects.findAll { it.subprojects.empty }) {
 
         guavaVersion = '27.0.1-jre'
         modelmapperVersion = '1.1.2'
-
         orikaVersion = '1.5.4'
 
         mySQLVersion = '8.0.13'
@@ -106,14 +105,11 @@ configure(allprojects.findAll { it.subprojects.empty }) {
 }
 
 configure(subprojects.findAll {
-    it.subprojects.empty && (it.name.endsWith('-service') || it.name.endsWith('-web'))
+    it.subprojects.empty && it.name.endsWith('-service')
 }) {
     //Spring Boot
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
-
-    //Node
-    /*apply plugin: "com.moowork.node"*/
 
     dependencyManagement {
         imports {
@@ -129,11 +125,9 @@ configure(subprojects.findAll {
         /** Spring Boot */
         implementation("org.springframework.boot:spring-boot-starter")
         implementation("org.springframework.boot:spring-boot-starter-aop")
-        implementation("org.springframework.boot:spring-boot-starter-web")
         implementation("org.springframework.boot:spring-boot-starter-amqp")
         implementation("org.springframework.boot:spring-boot-starter-batch")
         implementation("org.springframework.boot:spring-boot-starter-cache")
-        implementation("org.springframework.boot:spring-boot-starter-actuator")
         implementation("org.springframework.boot:spring-boot-starter-data-jpa")
         implementation("org.springframework.boot:spring-boot-starter-data-jdbc")
         implementation("org.springframework.boot:spring-boot-starter-data-redis")
@@ -162,14 +156,57 @@ configure(subprojects.findAll {
         //implementation("org.springframework.boot:spring-boot-starter-tomcat")
 
         implementation("org.springframework.boot:spring-boot-starter-jersey")
-        implementation("org.springframework.boot:spring-boot-starter-freemarker")
-        implementation("org.springframework.boot:spring-boot-starter-thymeleaf")
         //implementation("org.springframework.boot:spring-boot-starter-groovy-templates")
 
-        //implementation("org.springframework.boot:spring-boot-starter-actuator")
+        implementation("org.springframework.boot:spring-boot-starter-actuator")
         //implementation("org.springframework.boot:spring-boot-starter-cloud-connectors")
 
         //runtime("org.springframework.boot:spring-boot-devtools")
+
+        testImplementation("org.springframework.boot:spring-boot-starter-test")
+    }
+}
+
+
+configure(subprojects.findAll {
+    it.subprojects.empty && it.name.endsWith('-web')
+}) {
+    //Spring Boot
+    apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
+
+    //Node
+    /*apply plugin: "com.moowork.node"*/
+
+    dependencyManagement {
+        imports {
+            mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
+            mavenBom("org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}")
+            mavenBom("org.springframework.cloud:spring-cloud-alibaba-dependencies:${springCloudAliVersion}")
+        }
+    }
+
+    ext {}
+
+    dependencies {
+        /** Spring Boot */
+        implementation("org.springframework.boot:spring-boot-starter")
+        implementation("org.springframework.boot:spring-boot-starter-web")
+
+        implementation("org.springframework.boot:spring-boot-starter-security")
+        implementation("org.springframework.boot:spring-boot-starter-validation")
+
+        implementation("org.springframework.boot:spring-boot-starter-json")
+
+        implementation("org.springframework.boot:spring-boot-starter-webflux")
+        implementation("org.springframework.boot:spring-boot-starter-web-services")
+        implementation("org.springframework.boot:spring-boot-starter-websocket")
+
+        implementation("org.springframework.boot:spring-boot-starter-jersey")
+        implementation("org.springframework.boot:spring-boot-starter-freemarker")
+        implementation("org.springframework.boot:spring-boot-starter-thymeleaf")
+
+        implementation("org.springframework.boot:spring-boot-starter-actuator")
 
         testImplementation("org.springframework.boot:spring-boot-starter-test")
     }
@@ -185,30 +222,14 @@ configure(subprojects.findAll {
         /** Spring Boot */
         implementation("org.springframework.boot:spring-boot-starter:${springBootVersion}")
         implementation("org.springframework.boot:spring-boot-starter-aop:${springBootVersion}")
-        implementation("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
         implementation("org.springframework.boot:spring-boot-starter-amqp:${springBootVersion}")
         implementation("org.springframework.boot:spring-boot-starter-batch:${springBootVersion}")
         implementation("org.springframework.boot:spring-boot-starter-cache:${springBootVersion}")
         implementation("org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}")
         implementation("org.springframework.boot:spring-boot-starter-data-jdbc:${springBootVersion}")
         implementation("org.springframework.boot:spring-boot-starter-data-redis:${springBootVersion}")
-        //implementation("org.springframework.boot:spring-boot-starter-data-mongodb")
-        //implementation("org.springframework.boot:spring-boot-starter-data-solr")
 
-        //implementation("org.springframework.boot:spring-boot-starter-security:${springBootVersion}")
-        //implementation("org.springframework.boot:spring-boot-starter-oauth2-client")
-        //implementation("org.springframework.boot:spring-boot-starter-oauth2-resource-server")
-
-        //implementation("org.springframework.boot:spring-boot-starter-validation:${springBootVersion}")
-        //implementation("org.springframework.boot:spring-boot-starter-quartz:${springBootVersion}")
-        //implementation("org.springframework.boot:spring-boot-starter-json:${springBootVersion}")
-        //implementation("org.springframework.boot:spring-boot-starter-mail:${springBootVersion}")
-
-        //implementation("org.springframework.boot:spring-boot-starter-webflux:${springBootVersion}")
-        //implementation("org.springframework.boot:spring-boot-starter-web-services:${springBootVersion}")
-        //implementation("org.springframework.boot:spring-boot-starter-websocket:${springBootVersion}")
-
-        //implementation("org.springframework.boot:spring-boot-starter-jersey:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter-validation:${springBootVersion}")
 
         testImplementation("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
     }
