--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,13 @@
 buildscript {
     ext {
-        springBootVersion = '2.1.2.RELEASE'
+        springBootVersion = '2.1.3.RELEASE'
         springCloudVersion = 'Finchley.RELEASE'
         springCloudAliVersion = '0.2.1.RELEASE'
     }
     repositories {
         mavenLocal()
         maven { url "http://maven.aliyun.com/nexus/content/groups/public" }
+        maven { url "https://repo.spring.io/milestone" }
         maven { url "https://plugins.gradle.org/m2/" }
         mavenCentral()
         jcenter()
@@ -34,6 +35,7 @@ configure(allprojects.findAll { it.subprojects.empty }) {
     repositories {
         mavenLocal()
         maven { url "http://maven.aliyun.com/nexus/content/groups/public" }
+        maven { url "https://repo.spring.io/milestone" }
         maven { url "https://plugins.gradle.org/m2/" }
         mavenCentral()
         jcenter()
@@ -71,7 +73,8 @@ configure(allprojects.findAll { it.subprojects.empty }) {
 
     dependencies {
         //Lombok
-        implementation("org.projectlombok:lombok:${lombokVersion}")
+        compileOnly ("org.projectlombok:lombok:${lombokVersion}")
+        annotationProcessor ("org.projectlombok:lombok:${lombokVersion}")
 
         // Google Guava
         implementation("com.google.guava:guava:${guavaVersion}")
