--- a/learning/netty/build.gradle
+++ b/learning/netty/build.gradle
@@ -1,4 +1,6 @@
 dependencies {
+    implementation("org.slf4j:slf4j-api:1.7.26")
+    implementation("org.slf4j:slf4j-log4j12:1.7.26")
     implementation("io.netty:netty-all:4.1.33.Final")
     implementation("io.netty:netty-codec:4.1.33.Final")
 }
