--- a/build.gradle
+++ b/build.gradle
@@ -81,7 +81,7 @@ configure(allprojects.findAll { it.subprojects.empty }) {
         // Orika
         implementation("ma.glasnost.orika:orika-core:${orikaVersion}")
 
-        //FastJSON
+        // FastJSON
         implementation("com.alibaba:fastjson:${fastJosnVersion}")
 
         // Commons
@@ -118,50 +118,59 @@ configure(subprojects.findAll {
 
         druidVersion = "1.1.14"
 
+        myBatisVersion = "2.0.0"
         hibernateVersion = "5.4.0.Final"
 
         mybatisVersion = "3.4.6"
-        mybatisSpringVersion = "1.3.2"
         pagehelperVersion = "5.1.8"
+
+        springBootMyBatisVersion = "2.0.0"
     }
 
     dependencies {
         // Spring Boot
-        implementation("org.springframework.boot:spring-boot-starter:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter")
         // Spring AOP
-        implementation("org.springframework.boot:spring-boot-starter-aop:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter-aop")
+        // Spring Cache
+        implementation("org.springframework.boot:spring-boot-starter-cache")
+        // Spring Batch
+        implementation("org.springframework.boot:spring-boot-starter-batch")
 
         // Spring Data JPA
-        implementation("org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter-data-jpa")
         // Spring JDBC
-        implementation("org.springframework.boot:spring-boot-starter-data-jdbc:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter-data-jdbc")
 
         // Spring AMQP
-        implementation("org.springframework.boot:spring-boot-starter-amqp:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter-amqp")
         // Spring Redis
-        implementation("org.springframework.boot:spring-boot-starter-data-redis:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter-data-redis")
 
         // Spring Actuator
-        implementation("org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter-actuator")
 
         // Spring Security
-        implementation("org.springframework.boot:spring-boot-starter-security:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter-security")
 
         // Spring WebFlux
-        implementation("org.springframework.boot:spring-boot-starter-webflux:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter-webflux")
         // Spring WebSocket
-        implementation("org.springframework.boot:spring-boot-starter-websocket:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter-websocket")
 
         //Spring REST Jersey
-        implementation("org.springframework.boot:spring-boot-starter-jersey:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter-jersey")
         // Spring Annotation-Validation
-        implementation("org.springframework.boot:spring-boot-starter-validation:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter-validation")
         // Spring JSON
-        implementation("org.springframework.boot:spring-boot-starter-json:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter-json")
         // Spring Quartz
-        implementation("org.springframework.boot:spring-boot-starter-quartz:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter-quartz")
         // Spring Mail
-        implementation("org.springframework.boot:spring-boot-starter-mail:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter-mail")
+
+        // Spring Cloud
+        implementation("org.springframework.cloud:spring-cloud-starter")
 
         // MySQL
         implementation("mysql:mysql-connector-java:${mysqlVersion}")
@@ -170,43 +179,63 @@ configure(subprojects.findAll {
 
         // Hibernate
         implementation("org.hibernate:hibernate-core:${hibernateVersion}")
-        //implementation("com.github.hibernate-redis:hibernate-redis:${hibernateRedisVersion}")
 
         // MyBatis
-        implementation("org.mybatis:mybatis:${mybatisVersion}")
-        implementation("org.mybatis:mybatis-spring:${mybatisSpringVersion}")
+        implementation("org.mybatis.spring.boot:mybatis-spring-boot-starter:${myBatisVersion}")
         implementation("com.github.pagehelper:pagehelper:${pagehelperVersion}")
 
         // Spring Devtools
-        runtime("org.springframework.boot:spring-boot-devtools:${springBootVersion}")
+        runtime("org.springframework.boot:spring-boot-devtools")
+
+        // Spring Boot Configuration Processor
+        annotationProcessor ("org.springframework.boot:spring-boot-configuration-processor")
 
         // Spring Test
-        testImplementation("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
+        testImplementation("org.springframework.boot:spring-boot-starter-test")
 
-        //NoSQL
-        //implementation("org.springframework.boot:spring-boot-starter-data-mongodb:${springBootVersion}")
-        //implementation("org.springframework.boot:spring-boot-starter-data-solr:${springBootVersion}")
+        // Spring Cloud Connectors
+        //implementation("org.springframework.boot:spring-boot-starter-cloud-connectors")
+
+        // Config Server
+        //implementation("org.springframework.cloud:spring-cloud-config-server")
+
+        // Eureka
+        //implementation("org.springframework.cloud:spring-cloud-starter-netflix-eureka-server")
+        //implementation("org.springframework.cloud:spring-cloud-starter-netflix-eureka-client")
+
+        // Spring LDAP
+        //implementation("org.springframework.boot:spring-boot-starter-data-ldap")
+        // Spring Elasticsearch
+        //implementation("org.springframework.boot:spring-boot-starter-data-elasticsearch")
+
+        // NoSQL
+        //implementation("org.springframework.boot:spring-boot-starter-data-neo4j")
+        //implementation("org.springframework.boot:spring-boot-starter-data-rest")
+        //implementation("org.springframework.boot:spring-boot-starter-data-mongodb-reactive")
+        //implementation("org.springframework.boot:spring-boot-starter-data-mongodb")
+        //implementation("org.springframework.boot:spring-boot-starter-data-mongodb-reactive")
+        //implementation("org.springframework.boot:spring-boot-starter-data-solr")
+
+        // Templates
+        //implementation("org.springframework.boot:spring-boot-starter-freemarker")
+        //implementation("org.springframework.boot:spring-boot-starter-groovy-templates")
+        //implementation("org.springframework.boot:spring-boot-starter-thymeleaf")
+        //implementation("org.springframework.boot:spring-boot-starter-mustache")
 
         // OAuth2
-        //implementation("org.springframework.boot:spring-boot-starter-oauth2-client:${springBootVersion}")
-        //implementation("org.springframework.boot:spring-boot-starter-oauth2-resource-server:${springBootVersion}")
+        //implementation("org.springframework.boot:spring-boot-starter-oauth2-client")
+        //implementation("org.springframework.boot:spring-boot-starter-oauth2-resource-server")
 
-        //Logback 默认日志启动器
-        //implementation("org.springframework.boot:spring-boot-starter-logging:${springBootVersion}")
+        // Logback 默认日志启动器
+        //implementation("org.springframework.boot:spring-boot-starter-logging")
         //使用Log4j2进行日志记录,替代spring-boot-starter-logging
-        //implementation("org.springframework.boot:spring-boot-starter-log4j2:${springBootVersion}")
-        //implementation("org.springframework.boot:spring-boot-starter-reactor-netty:${springBootVersion}")
-        //implementation("org.springframework.boot:spring-boot-starter-jetty:${springBootVersion}")
-        //implementation("org.springframework.boot:spring-boot-starter-tomcat:${springBootVersion}")
+        //implementation("org.springframework.boot:spring-boot-starter-log4j2")
+        //implementation("org.springframework.boot:spring-boot-starter-reactor-netty")
+        //implementation("org.springframework.boot:spring-boot-starter-jetty")
+        //implementation("org.springframework.boot:spring-boot-starter-tomcat")
 
-        // Spring-Cloud-Connectors
-        //implementation("org.springframework.boot:spring-boot-starter-cloud-connectors:${springBootVersion}")
-
-        //Other
-        //implementation("org.springframework.boot:spring-boot-starter-batch:${springBootVersion}")
-        //implementation("org.springframework.boot:spring-boot-starter-cache:${springBootVersion}")
-        //implementation("org.springframework.boot:spring-boot-starter-groovy-templates:${springBootVersion}")
-        //implementation("org.springframework.boot:spring-boot-starter-web-services:${springBootVersion}")
+        // Other
+        //implementation("org.springframework.boot:spring-boot-starter-web-services")
     }
 }
 
@@ -233,45 +262,48 @@ configure(subprojects.findAll {
 
     dependencies {
         // Spring Boot
-        implementation("org.springframework.boot:spring-boot-starter:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter")
         // Spring MVC
-        implementation("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter-web")
 
         // Spring Redis
-        implementation("org.springframework.boot:spring-boot-starter-data-redis:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter-data-redis")
 
         // Spring Actuator
-        implementation("org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter-actuator")
 
         // Spring Security
-        implementation("org.springframework.boot:spring-boot-starter-security:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter-security")
 
         // Spring WebFlux
-        implementation("org.springframework.boot:spring-boot-starter-webflux:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter-webflux")
         // Spring WebSocket
-        implementation("org.springframework.boot:spring-boot-starter-websocket:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter-websocket")
 
         //Spring REST Jersey
-        implementation("org.springframework.boot:spring-boot-starter-jersey:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter-jersey")
         // Spring Annotation-Validation
-        implementation("org.springframework.boot:spring-boot-starter-validation:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter-validation")
         // Spring JSON
-        implementation("org.springframework.boot:spring-boot-starter-json:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter-json")
         // Spring Quartz
-        implementation("org.springframework.boot:spring-boot-starter-quartz:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter-quartz")
         // Spring Mail
-        implementation("org.springframework.boot:spring-boot-starter-mail:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter-mail")
 
         // Spring Freemarker
-        implementation("org.springframework.boot:spring-boot-starter-freemarker:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter-freemarker")
         // Spring Thymeleaf
-        implementation("org.springframework.boot:spring-boot-starter-thymeleaf:${springBootVersion}")
+        implementation("org.springframework.boot:spring-boot-starter-thymeleaf")
 
         // Spring Devtools
-        runtime("org.springframework.boot:spring-boot-devtools:${springBootVersion}")
+        runtime("org.springframework.boot:spring-boot-devtools")
+
+        // Spring Boot Configuration Processor
+        annotationProcessor ("org.springframework.boot:spring-boot-configuration-processor")
 
         // Spring Test
-        testImplementation("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
+        testImplementation("org.springframework.boot:spring-boot-starter-test")
     }
 }
 
@@ -300,6 +332,9 @@ configure(subprojects.findAll {
 
         // Spring Devtools
         runtime("org.springframework.boot:spring-boot-devtools:${springBootVersion}")
+
+        // Spring Boot Configuration Processor
+        annotationProcessor ("org.springframework.boot:spring-boot-configuration-processor:${springBootVersion}")
 
         // Spring Test
         testImplementation("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
