--- a/service/index/index-service/src/main/resources/application.yml
+++ b/service/index/index-service/src/main/resources/application.yml
@@ -1,29 +1,3 @@
 spring:
-  main:
-    allow-bean-definition-overriding: true
-  security:
-    user:
-      name: actuator
-      password: actuator
-      roles: ACTUATOR_ADMIN
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url:
-    username:
-    password:
-  redis:
-    host:
-    port:
-    password:
-    timeout:
-  rabbitmq:
-    host:
-    port:
-    username:
-    password:
-    virtual-host:
-
-server:
-  port: 8080
-  tomcat:
-    uri-encoding: UTF-8
+  profiles:
+    active: dev
