--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '2.1.3.RELEASE'
+        springBootVersion = '2.1.4.RELEASE'
         springCloudVersion = 'Finchley.RELEASE'
         springCloudAliVersion = '0.2.1.RELEASE'
     }
@@ -8,6 +8,7 @@ buildscript {
         mavenLocal()
         maven { url "http://maven.aliyun.com/nexus/content/groups/public" }
         maven { url "https://repo.spring.io/milestone" }
+        maven { url "https://repo.spring.io/snapshot" }
         maven { url "https://plugins.gradle.org/m2/" }
         mavenCentral()
         jcenter()
@@ -29,13 +30,14 @@ configure(allprojects.findAll { it.subprojects.empty }) {
     apply plugin: 'idea'
     apply plugin: 'eclipse'
 
-    sourceCompatibility = 11
-    targetCompatibility = 11
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
 
     repositories {
         mavenLocal()
         maven { url "http://maven.aliyun.com/nexus/content/groups/public" }
         maven { url "https://repo.spring.io/milestone" }
+        maven { url "https://repo.spring.io/snapshot" }
         maven { url "https://plugins.gradle.org/m2/" }
         mavenCentral()
         jcenter()
@@ -77,34 +79,76 @@ configure(allprojects.findAll { it.subprojects.empty }) {
         annotationProcessor ("org.projectlombok:lombok:${lombokVersion}")
 
         // Google Guava
-        implementation("com.google.guava:guava:${guavaVersion}")
+        compile("com.google.guava:guava:${guavaVersion}")
 
         // ModelMapper
-        implementation("org.modelmapper:modelmapper:${modelmapperVersion}")
-
+        compile("org.modelmapper:modelmapper:${modelmapperVersion}")
         //Orika
-        implementation("ma.glasnost.orika:orika-core:${orikaVersion}")
+        compile("ma.glasnost.orika:orika-core:${orikaVersion}")
 
         // MySQL
-        implementation("mysql:mysql-connector-java:${mySQLVersion}")
-
+        compile("mysql:mysql-connector-java:${mySQLVersion}")
         // Hibernate
-        implementation("org.hibernate:hibernate-core:${hibernateVersion}")
-        //implementation("com.github.hibernate-redis:hibernate-redis:${hibernateRedisVersion}")
-
+        compile("org.hibernate:hibernate-core:${hibernateVersion}")
+        //compile("com.github.hibernate-redis:hibernate-redis:${hibernateRedisVersion}")
         // MyBatis
-        implementation("org.mybatis:mybatis:${mybatisVersion}")
-        implementation("org.mybatis:mybatis-spring:${mybatisSpringVersion}")
-        implementation("com.github.pagehelper:pagehelper:${pagehelperVersion}")
+        compile("org.mybatis:mybatis:${mybatisVersion}")
+        compile("org.mybatis:mybatis-spring:${mybatisSpringVersion}")
+        compile("com.github.pagehelper:pagehelper:${pagehelperVersion}")
 
         // Commons
-        implementation("org.apache.commons:commons-lang3:${commonsLang3Version}")
-        implementation("commons-collections:commons-collections:${commonsCollectionsVersion}")
-        implementation("commons-io:commons-io:${commonsIoVersion}")
+        compile("org.apache.commons:commons-lang3:${commonsLang3Version}")
+        compile("commons-collections:commons-collections:${commonsCollectionsVersion}")
+        compile("commons-io:commons-io:${commonsIoVersion}")
 
         //Junit
-        testImplementation("junit:junit:${junitVersion}")
+        testcompile("junit:junit:${junitVersion}")
     }
+}
+
+configure(subprojects.findAll {
+    it.subprojects.empty && (it.name.startsWith('platform-'))
+}) {
+
+    ext {
+        rocketMqVersion = "4.4.0"
+        kafkaVersion = "2.1.2.RELEASE"
+    }
+
+    dependencies {
+        /** Spring Boot */
+        compile("org.springframework.boot:spring-boot-starter:${springBootVersion}")
+        compile("org.springframework.boot:spring-boot-starter-aop:${springBootVersion}")
+
+        compile("org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}")
+        compile("org.springframework.boot:spring-boot-starter-data-jdbc:${springBootVersion}")
+
+        compile("org.springframework.boot:spring-boot-starter-data-redis:${springBootVersion}")
+
+        compile("org.springframework.boot:spring-boot-starter-validation:${springBootVersion}")
+
+        compile("org.springframework.boot:spring-boot-starter-amqp:${springBootVersion}")
+        compile("org.apache.rocketmq:rocketmq-client:${rocketMqVersion}")
+        compile("org.springframework.cloud:spring-cloud-starter-stream-kafka:${kafkaVersion}")
+
+        testcompile("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
+    }
+
+}
+
+configure(subprojects.findAll {
+    it.subprojects.empty && (it.name.endsWith('-api'))
+}) {
+
+    ext {}
+
+    dependencies {
+        /** Spring Boot */
+        compile("org.springframework.boot:spring-boot-starter:${springBootVersion}")
+        compile("org.springframework.boot:spring-boot-starter-jersey:${springBootVersion}")
+        testcompile("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
+    }
+
 }
 
 configure(subprojects.findAll {
@@ -128,67 +172,67 @@ configure(subprojects.findAll {
 
     dependencies {
         /** Spring Boot */
-        implementation("org.springframework.boot:spring-boot-starter")
+        compile("org.springframework.boot:spring-boot-starter")
         //AOP
-        implementation("org.springframework.boot:spring-boot-starter-aop")
+        compile("org.springframework.boot:spring-boot-starter-aop")
         //AMQP
-        implementation("org.springframework.boot:spring-boot-starter-amqp")
+        compile("org.springframework.boot:spring-boot-starter-amqp")
         //Dubbo
-        //implementation("org.springframework.boot:spring-boot-starter-dubbo")
+        //compile("org.springframework.boot:spring-boot-starter-dubbo")
         //Actuator - HealthCheck
-        implementation("org.springframework.boot:spring-boot-starter-actuator")
+        compile("org.springframework.boot:spring-boot-starter-actuator")
         //Security
-        implementation("org.springframework.boot:spring-boot-starter-security")
+        compile("org.springframework.boot:spring-boot-starter-security")
         //Data-JPA
-        implementation("org.springframework.boot:spring-boot-starter-data-jpa")
+        compile("org.springframework.boot:spring-boot-starter-data-jpa")
         //JDBC
-        implementation("org.springframework.boot:spring-boot-starter-data-jdbc")
+        compile("org.springframework.boot:spring-boot-starter-data-jdbc")
         //Redis
-        implementation("org.springframework.boot:spring-boot-starter-data-redis")
+        compile("org.springframework.boot:spring-boot-starter-data-redis")
         //JSON
-        implementation("org.springframework.boot:spring-boot-starter-json")
+        compile("org.springframework.boot:spring-boot-starter-json")
         //Quartz
-        implementation("org.springframework.boot:spring-boot-starter-quartz")
+        compile("org.springframework.boot:spring-boot-starter-quartz")
         //Annotation Validation
-        implementation("org.springframework.boot:spring-boot-starter-validation")
+        compile("org.springframework.boot:spring-boot-starter-validation")
         //WebFlux
-        implementation("org.springframework.boot:spring-boot-starter-webflux")
+        compile("org.springframework.boot:spring-boot-starter-webflux")
         //Websocket
-        implementation("org.springframework.boot:spring-boot-starter-websocket")
+        compile("org.springframework.boot:spring-boot-starter-websocket")
         //RESTful
-        implementation("org.springframework.boot:spring-boot-starter-jersey")
+        compile("org.springframework.boot:spring-boot-starter-jersey")
         //Groovy Template
-        implementation("org.springframework.boot:spring-boot-starter-groovy-templates")
+        compile("org.springframework.boot:spring-boot-starter-groovy-templates")
 
         //Devtools
         runtime("org.springframework.boot:spring-boot-devtools")
 
         //Logback 默认日志启动器
-        //implementation("org.springframework.boot:spring-boot-starter-logging")
+        //compile("org.springframework.boot:spring-boot-starter-logging")
         //使用Log4j2进行日志记录,替代spring-boot-starter-logging
-        //implementation("org.springframework.boot:spring-boot-starter-log4j2")
-        //implementation("org.springframework.boot:spring-boot-starter-reactor-netty")
-        //implementation("org.springframework.boot:spring-boot-starter-jetty")
-        //implementation("org.springframework.boot:spring-boot-starter-tomcat")
+        //compile("org.springframework.boot:spring-boot-starter-log4j2")
+        //compile("org.springframework.boot:spring-boot-starter-reactor-netty")
+        //compile("org.springframework.boot:spring-boot-starter-jetty")
+        //compile("org.springframework.boot:spring-boot-starter-tomcat")
 
         //Other
-        //implementation("org.springframework.boot:spring-boot-starter-mail")
-        //implementation("org.springframework.boot:spring-boot-starter-batch")
-        //implementation("org.springframework.boot:spring-boot-starter-cache")
-        //implementation("org.springframework.boot:spring-boot-starter-web-services")
+        //compile("org.springframework.boot:spring-boot-starter-mail")
+        //compile("org.springframework.boot:spring-boot-starter-batch")
+        //compile("org.springframework.boot:spring-boot-starter-cache")
+        //compile("org.springframework.boot:spring-boot-starter-web-services")
 
         //NoSQL
-        //implementation("org.springframework.boot:spring-boot-starter-data-mongodb")
-        //implementation("org.springframework.boot:spring-boot-starter-data-solr")
+        //compile("org.springframework.boot:spring-boot-starter-data-mongodb")
+        //compile("org.springframework.boot:spring-boot-starter-data-solr")
 
         //OAuth2 JWT
-        //implementation("org.springframework.boot:spring-boot-starter-oauth2-client")
-        //implementation("org.springframework.boot:spring-boot-starter-oauth2-resource-server")
+        //compile("org.springframework.boot:spring-boot-starter-oauth2-client")
+        //compile("org.springframework.boot:spring-boot-starter-oauth2-resource-server")
 
-        //implementation("org.springframework.boot:spring-boot-starter-cloud-connectors")
+        //compile("org.springframework.boot:spring-boot-starter-cloud-connectors")
 
         //Junit
-        testImplementation("org.springframework.boot:spring-boot-starter-test")
+        testcompile("org.springframework.boot:spring-boot-starter-test")
     }
 }
 
@@ -215,67 +259,24 @@ configure(subprojects.findAll {
 
     dependencies {
         /** Spring Boot */
-        implementation("org.springframework.boot:spring-boot-starter")
-        implementation("org.springframework.boot:spring-boot-starter-web")
+        compile("org.springframework.boot:spring-boot-starter")
+        compile("org.springframework.boot:spring-boot-starter-web")
 
-        implementation("org.springframework.boot:spring-boot-starter-security")
-        implementation("org.springframework.boot:spring-boot-starter-validation")
+        compile("org.springframework.boot:spring-boot-starter-security")
+        compile("org.springframework.boot:spring-boot-starter-validation")
 
-        implementation("org.springframework.boot:spring-boot-starter-json")
+        compile("org.springframework.boot:spring-boot-starter-json")
 
-        implementation("org.springframework.boot:spring-boot-starter-webflux")
-        implementation("org.springframework.boot:spring-boot-starter-web-services")
-        implementation("org.springframework.boot:spring-boot-starter-websocket")
+        compile("org.springframework.boot:spring-boot-starter-webflux")
+        compile("org.springframework.boot:spring-boot-starter-web-services")
+        compile("org.springframework.boot:spring-boot-starter-websocket")
 
-        implementation("org.springframework.boot:spring-boot-starter-jersey")
-        implementation("org.springframework.boot:spring-boot-starter-freemarker")
-        implementation("org.springframework.boot:spring-boot-starter-thymeleaf")
+        compile("org.springframework.boot:spring-boot-starter-jersey")
+        compile("org.springframework.boot:spring-boot-starter-freemarker")
+        compile("org.springframework.boot:spring-boot-starter-thymeleaf")
 
-        implementation("org.springframework.boot:spring-boot-starter-actuator")
+        compile("org.springframework.boot:spring-boot-starter-actuator")
 
-        testImplementation("org.springframework.boot:spring-boot-starter-test")
+        testcompile("org.springframework.boot:spring-boot-starter-test")
     }
-}
-
-configure(subprojects.findAll {
-    it.subprojects.empty && (it.name.startsWith('platform-'))
-}) {
-
-    ext {
-        rocketMqVersion = '4.4.0'
-    }
-
-    dependencies {
-        /** Spring Boot */
-        implementation("org.springframework.boot:spring-boot-starter:${springBootVersion}")
-        implementation("org.springframework.boot:spring-boot-starter-aop:${springBootVersion}")
-        
-        implementation("org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}")
-        implementation("org.springframework.boot:spring-boot-starter-data-jdbc:${springBootVersion}")
-        
-        implementation("org.springframework.boot:spring-boot-starter-data-redis:${springBootVersion}")
-
-        implementation("org.springframework.boot:spring-boot-starter-validation:${springBootVersion}")
-
-        implementation("org.springframework.boot:spring-boot-starter-amqp:${springBootVersion}")
-        implementation("org.apache.rocketmq:rocketmq-client:${rocketMqVersion}")
-
-        testImplementation("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
-    }
-
-}
-
-configure(subprojects.findAll {
-    it.subprojects.empty && (it.name.endsWith('-api'))
-}) {
-
-    ext {}
-
-    dependencies {
-        /** Spring Boot */
-        implementation("org.springframework.boot:spring-boot-starter:${springBootVersion}")
-        implementation("org.springframework.boot:spring-boot-starter-jersey:${springBootVersion}")
-        testImplementation("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
-    }
-
 }
